--- a/.env
+++ b/.env
@@ -1,78 +1,56 @@
-# .env file - FIXED Configuration for Connection Issues
+# .env file - Static Implementation Configuration
 # =============================================================================
 # 🔧 CONFIGURE ME - CHANGE THESE SETTINGS BEFORE DEPLOYMENT
 # =============================================================================
 
-# Quart Application Security (REQUIRED TO CHANGE)
-SECRET_KEY=CHANGE-THIS-TO-A-SECURE-RANDOM-STRING-32-CHARACTERS-MINIMUM
+# Domain Configuration (REQUIRED TO CHANGE)
+ALLOWED_DOMAINS=localhost,127.0.0.1,ai.junder.uk
+
+# Admin User Configuration (REQUIRED TO CHANGE)
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin
 ADMIN_USER_ID=admin
 
-# Domain Configuration (REQUIRED TO CHANGE)
-ALLOWED_DOMAINS=localhost,127.0.0.1,ai.junder.uk
-
-# Redis Connection (CHANGE IF USING EXTERNAL REDIS)
-REDIS_URL=redis://redis:6379/0
-
-# Model Configuration - FIXED for actual model
-# Based on logs, the actual model appears to be "Devstral Small 2505"
+# Model Configuration
 OLLAMA_MODEL=devstral
 MODEL_DISPLAY_NAME=Devstral Small 2505
 MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model (23.57B parameters)
 
-# Performance Tuning - ULTRA CONSERVATIVE for stability
-OLLAMA_GPU_LAYERS=12                      # REDUCED from 8 to 6 to fix connection issues
-OLLAMA_CONTEXT_SIZE=512                  # REDUCED from 1024 for stability
-OLLAMA_BATCH_SIZE=64                     # REDUCED from 128 for stability
-OLLAMA_NUM_THREAD=2                      # REDUCED from 4 for stability
+# Performance Tuning - CONSERVATIVE for stability
+OLLAMA_GPU_LAYERS=12                      # GPU layers for model
+OLLAMA_CONTEXT_SIZE=512                   # Context window size
+OLLAMA_BATCH_SIZE=64                      # Batch processing size
+OLLAMA_NUM_THREAD=2                       # Number of threads
 
-# User Management (ADJUST FOR YOUR NEEDS)
-MAX_CHATS_PER_USER=1                     # Maximum chats per user
-MAX_PENDING_USERS=2                      # Maximum pending user registrations
-RATE_LIMIT_MESSAGES_PER_MINUTE=100       # Rate limit per user
+# User Management
+MAX_CHATS_PER_USER=1                      # Maximum chats per user
+MAX_PENDING_USERS=2                       # Maximum pending user registrations
+RATE_LIMIT_MESSAGES_PER_MINUTE=100        # Rate limit per user
 
-# Resource Limits - REDUCED for stability
-OLLAMA_MEMORY=15G                        # REDUCED from 16G
-OLLAMA_CPU=4                             # REDUCED from 4
-QUART_APP_MEMORY=1G                      # RAM for web app
-NGINX_MEMORY=1G                          # RAM for nginx
-
-# =============================================================================
-# 📊 DOCKER COMPOSE RESOURCE LIMITS
-# =============================================================================
-QUART_APP_MEMORY=1G
-QUART_APP_CPU=1
-REDIS_MEMORY=1G
-REDIS_CPU=1
-NGINX_MEMORY=1G
-NGINX_CPU=1
+# Resource Limits
+OLLAMA_MEMORY=15G                         # RAM for Ollama
+OLLAMA_CPU=4                              # CPU cores for Ollama
+REDIS_MEMORY=2G                           # RAM for Redis
+REDIS_CPU=1                               # CPU cores for Redis
+NGINX_MEMORY=1G                           # RAM for nginx
+NGINX_CPU=1                               # CPU cores for nginx
 
 # =============================================================================
-# TIMEOUT SETTINGS - CONSERVATIVE
-# =============================================================================
-UNLIMITED_TIMEOUT=300                    # 5 minutes instead of unlimited
-STREAMING_TIMEOUT=300                    # 5 minutes instead of unlimited
-AIOHTTP_TOTAL_TIMEOUT=300                # 5 minutes
-AIOHTTP_CONNECT_TIMEOUT=30               # 30 seconds
-AIOHTTP_READ_TIMEOUT=300                 # 5 minutes
-
-# =============================================================================
-# ⚡ OLLAMA PERFORMANCE PARAMETERS - CONSERVATIVE
+# ⚡ OLLAMA PERFORMANCE PARAMETERS
 # =============================================================================
 OLLAMA_HOST=0.0.0.0
 OLLAMA_URL=http://ollama:11434
-OLLAMA_KEEP_ALIVE=5m                     # REDUCED from 10m
-OLLAMA_MAX_LOADED_MODELS=1               # Only one model
-OLLAMA_LOAD_TIMEOUT=10m                  # REDUCED from 15m
-OLLAMA_NOPRUNE=1                         # Never unload
-OLLAMA_MLOCK=1                           # Lock in RAM/VRAM
-OLLAMA_MMAP=0                            # Disable memory mapping
-OLLAMA_NUMA=0                            # Disable NUMA
-OLLAMA_MAIN_GPU=0                        # Primary GPU
+OLLAMA_KEEP_ALIVE=5m                      # Keep model loaded for 5 minutes
+OLLAMA_MAX_LOADED_MODELS=1                # Only one model at a time
+OLLAMA_LOAD_TIMEOUT=10m                   # Model load timeout
+OLLAMA_NOPRUNE=1                          # Never unload models
+OLLAMA_MLOCK=1                            # Lock model in RAM/VRAM
+OLLAMA_MMAP=0                             # Disable memory mapping
+OLLAMA_NUMA=0                             # Disable NUMA
+OLLAMA_MAIN_GPU=0                         # Primary GPU ID
 
 # =============================================================================
-# 🎛️ MODELFILE PARAMETERS - CONSERVATIVE
+# 🎛️ MODEL PARAMETERS
 # =============================================================================
 MODEL_TEMPERATURE=0.7
 MODEL_TOP_P=0.9
@@ -81,69 +59,66 @@ MODEL_REPEAT_PENALTY=1.1
 MODEL_MIROSTAT=0
 MODEL_MIROSTAT_ETA=0.1
 MODEL_MIROSTAT_TAU=5.0
-MODEL_USE_MMAP=false                     # BOOLEAN: false to disable mmap
-MODEL_USE_MLOCK=true                     # BOOLEAN: true to enable mlock
+MODEL_USE_MMAP=false                      # Disable memory mapping
+MODEL_USE_MLOCK=true                      # Enable memory locking
 MODEL_STOP_SEQUENCES=["<|endoftext|>", "<|im_end|>", "[DONE]", "<|end|>"]
 
 # =============================================================================
-# 📱 APPLICATION PERFORMANCE SETTINGS - ULTRA CONSERVATIVE
+# 📱 APPLICATION SETTINGS
 # =============================================================================
-MODEL_MAX_TOKENS=32                      # REDUCED from 64 for faster responses
-MODEL_TIMEOUT=60                         # REDUCED to 1 minute
-CHAT_HISTORY_LIMIT=5                     # REDUCED from 10
-CHAT_CACHE_TTL_SECONDS=1800              # REDUCED from 3600
-SSE_MAX_CONNECTIONS=5                    # REDUCED from 10
+MODEL_MAX_TOKENS=32                       # Max tokens per response
+MODEL_TIMEOUT=60                          # Response timeout in seconds
+CHAT_HISTORY_LIMIT=5                      # Messages to keep in history
+CHAT_CACHE_TTL_SECONDS=1800               # Cache TTL (30 minutes)
 
 # =============================================================================
-# 👥 CHAT AND USER MANAGEMENT SETTINGS
-# =============================================================================
-RATE_LIMIT_WINDOW=60                     # Rate limit window in seconds
-USER_ID_COUNTER_START=1000               # Starting ID for regular users
-
-# =============================================================================
-# 🖥️ NVIDIA GPU SETTINGS - CONSERVATIVE
-# =============================================================================
-NVIDIA_VISIBLE_DEVICES=0
-CUDA_MEMORY_FRACTION=0.80                # REDUCED from 0.90 for stability
-LOG_LEVEL=INFO
-LOG_FORMAT=json
-
-# =============================================================================
-# 🌐 QUART WEB APPLICATION
-# =============================================================================
-SECURE_COOKIES=0                         # Set to 1 for HTTPS
-APP_HOST=0.0.0.0
-APP_PORT=8000
-APP_WORKERS=1
-SESSION_LIFETIME_DAYS=7
-SSE_HEARTBEAT_INTERVAL=30
-SSE_RETRY_TIMEOUT=5000
-
-# =============================================================================
-# 🔒 VALIDATION AND SECURITY SETTINGS
+# 👥 USER VALIDATION SETTINGS
 # =============================================================================
 MIN_USERNAME_LENGTH=3
 MAX_USERNAME_LENGTH=50
 MIN_PASSWORD_LENGTH=6
 MAX_PASSWORD_LENGTH=128
-MAX_MESSAGE_LENGTH=5000                  # REDUCED from 10000
+MAX_MESSAGE_LENGTH=5000                   # Max message length
 MAX_FILENAME_LENGTH=255
 CSRF_TOKEN_LENGTH=32
 
 # =============================================================================
+# 🔒 RATE LIMITING SETTINGS
+# =============================================================================
+RATE_LIMIT_WINDOW=60                      # Rate limit window in seconds
+USER_ID_COUNTER_START=1000                # Starting ID for regular users
+
+# =============================================================================
+# 🖥️ NVIDIA GPU SETTINGS
+# =============================================================================
+NVIDIA_VISIBLE_DEVICES=0
+CUDA_MEMORY_FRACTION=0.80                 # Use 80% of GPU memory
+LOG_LEVEL=INFO
+LOG_FORMAT=json
+
+# =============================================================================
 # 📦 REDIS CONFIGURATION
 # =============================================================================
-REDIS_MAX_CONNECTIONS=25                 # REDUCED from 50
+REDIS_URL=redis://redis:6379/0
+REDIS_MAX_CONNECTIONS=25                  # Max Redis connections
 REDIS_SOCKET_KEEPALIVE=true
 REDIS_RETRY_ON_TIMEOUT=true
 REDIS_DECODE_RESPONSES=true
 
 # =============================================================================
-# 🚀 AIOHTTP CLIENT CONFIGURATION - CONSERVATIVE
+# ⏱️ TIMEOUT SETTINGS
 # =============================================================================
-AIOHTTP_LIMIT=50                         # CHANGED from 0 (unlimited) to 50
-AIOHTTP_LIMIT_PER_HOST=20                # CHANGED from 0 to 20
-AIOHTTP_KEEPALIVE_TIMEOUT=30             # CHANGED from 0 to 30 seconds
-AIOHTTP_ENABLE_CLEANUP_CLOSED=true       # CHANGED from false to true
-AIOHTTP_FORCE_CLOSE=false                # Keep connections open
-AIOHTTP_TTL_DNS_CACHE=300                # CHANGED from 0 to 5 minutes
+UNLIMITED_TIMEOUT=300                     # 5 minutes for long operations
+STREAMING_TIMEOUT=300                     # 5 minutes for streaming
+AIOHTTP_TOTAL_TIMEOUT=300                 # Total HTTP timeout
+AIOHTTP_CONNECT_TIMEOUT=30                # Connection timeout
+AIOHTTP_READ_TIMEOUT=300                  # Read timeout
+
+# =============================================================================
+# 🌐 CLIENT-SIDE CONFIGURATION
+# =============================================================================
+# These settings are used by the JavaScript application
+SESSION_LIFETIME_DAYS=7                   # Session lifetime in days
+SSE_HEARTBEAT_INTERVAL=30                 # SSE heartbeat interval
+SSE_MAX_CONNECTIONS=5                     # Max SSE connections
+SSE_RETRY_TIMEOUT=5000                    # SSE retry timeout in ms
