--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,7 +29,7 @@ http {
     keepalive_timeout 65;
     types_hash_max_size 2048;
     server_tokens off;
-    client_max_body_size 1M;              # Default limit
+    client_max_body_size 10M;
     client_body_buffer_size 16k;
     client_header_buffer_size 2k;
     large_client_header_buffers 4 8k;
@@ -45,58 +45,29 @@ http {
         application/json
         application/xml
         application/javascript
-        text/javascript;
+        text/javascript
+        text/html;
 
-    # Security Headers
-    add_header X-Frame-Options DENY always;
-    add_header X-Content-Type-Options nosniff always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
-    add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data:; font-src 'self' https://cdn.jsdelivr.net; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; connect-src 'self'" always;
-    
-    # Trust Cloudflare IPs for real IP detection
-    set_real_ip_from 103.21.244.0/22;
-    set_real_ip_from 103.22.200.0/22;
-    set_real_ip_from 103.31.4.0/22;
-    set_real_ip_from 104.16.0.0/13;
-    set_real_ip_from 104.24.0.0/14;
-    set_real_ip_from 108.162.192.0/18;
-    set_real_ip_from 131.0.72.0/22;
-    set_real_ip_from 141.101.64.0/18;
-    set_real_ip_from 162.158.0.0/15;
-    set_real_ip_from 172.64.0.0/13;
-    set_real_ip_from 173.245.48.0/20;
-    set_real_ip_from 188.114.96.0/20;
-    set_real_ip_from 190.93.240.0/20;
-    set_real_ip_from 197.234.240.0/22;
-    set_real_ip_from 198.41.128.0/17;
-    real_ip_header CF-Connecting-IP;
-    
-    # Rate limiting zones - SINGLE LAYER at nginx
-    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=10r/m;        # 10 requests per minute for login
-    limit_req_zone $binary_remote_addr zone=register_limit:10m rate=5r/m;      # 5 requests per minute for register
-    limit_req_zone $binary_remote_addr zone=strict_limit:10m rate=30r/m;       # 30 requests per minute for general endpoints
-    #limit_req_zone $binary_remote_addr zone=health_limit:10m rate=60r/m;       # 60 requests per minute for health checks
-    limit_req_zone $binary_remote_addr zone=chat_unlimited:10m rate=1000r/m;   # High limit for chat (authenticated users)
-    limit_req_zone $binary_remote_addr zone=admin_unlimited:10m rate=500r/m;   # High limit for admin (authenticated users)
+    # CORS Headers for API calls
+    map $request_method $cors_method {
+        OPTIONS 11;
+        GET     1;
+        POST    1;
+        PUT     1;
+        DELETE  1;
+        default 0;
+    }
+
+    # Rate limiting zones
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=100r/m;
+    limit_req_zone $binary_remote_addr zone=redis_limit:10m rate=200r/m;
+    limit_req_zone $binary_remote_addr zone=ollama_limit:10m rate=50r/m;
     
     limit_req_status 429;
 
-    # IP Whitelisting - Allow all IPs by default
-    geo $allowed_ip {
-        default 1;                      # ALLOW ALL by default
-        # You can add specific blocks here if needed:
-        # 1.2.3.4/32 0;                # Block specific IP
-        # 192.168.1.0/24 0;            # Block specific range
-    }
-
-    # FIXED: Add upstream definition for quart-app
-    upstream quart_backend {
-        server quart-app:8000 max_fails=3 fail_timeout=30s;
-        keepalive 32;
-        keepalive_requests 1000;
-        keepalive_timeout 120s;
+    # Upstream definitions
+    upstream ollama_backend {
+        server ollama:11434;
     }
 
     # Main server block
@@ -104,124 +75,117 @@ http {
         listen 80 default_server;
         server_name localhost ai.junder.uk _;
         
-        # IP Access Control
-        if ($allowed_ip = 0) {
-            return 403;
-        }
-
         root /usr/share/nginx/html;
+        index index.html;
+
+        # Security Headers
+        add_header X-Frame-Options DENY always;
+        add_header X-Content-Type-Options nosniff always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
         # =====================================================
-        # COMMON PROXY HEADERS - Applied to all proxy locations
+        # STATIC FILES
         # =====================================================
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        # =====================================================
-        # STATIC FILES - served directly from nginx
-        # =====================================================
-        location /static/ {
-            limit_req zone=strict_limit burst=10 nodelay;
-            
-            alias /usr/share/nginx/html/static/;
+        
+        # HTML Pages
+        location / {
+            try_files $uri $uri/ /index.html;
+            expires 1h;
+            add_header Cache-Control "public, max-age=3600";
+        }
+        
+        location ~* \.(html)$ {
+            expires 1h;
+            add_header Cache-Control "public, max-age=3600";
+        }
+        
+        # CSS, JS, Assets
+        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 30d;
             add_header Cache-Control "public, max-age=2592000";
         }
-        
+
         # =====================================================
-        # AUTHENTICATION ROUTES - STRICT rate limits
-        # =====================================================
-        
-        location = /login {
-            limit_req zone=login_limit burst=3 nodelay;
-            proxy_pass http://quart_backend/login;
-        }
-        
-        location = /register {
-            limit_req zone=register_limit burst=2 nodelay;
-            proxy_pass http://quart_backend/register;
-        }
-        
-        location = /logout {
-            limit_req zone=strict_limit burst=5 nodelay;
-            proxy_pass http://quart_backend/logout;
-        }
-        
-        # =====================================================
-        # CHAT ROUTES - Higher limits for authenticated users
+        # API PROXIES WITH CORS
         # =====================================================
         
-        location = /chat {
-            limit_req zone=chat_unlimited burst=100 nodelay;
-            client_max_body_size 1000M;
-            proxy_pass http://quart_backend/chat;
+        # Ollama API Proxy
+        location /api/ollama/ {
+            limit_req zone=ollama_limit burst=20 nodelay;
+            
+            # CORS Headers
+            if ($cors_method = 11) {
+                add_header Access-Control-Allow-Origin "*";
+                add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+                add_header Access-Control-Max-Age 86400;
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+            
+            if ($cors_method = 1) {
+                add_header Access-Control-Allow-Origin "*";
+                add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+            }
+            
+            # Remove /api/ollama prefix and proxy to Ollama
+            rewrite ^/api/ollama/(.*)$ /$1 break;
+            proxy_pass http://ollama_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Streaming support for Ollama
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_timeout 300s;
+            proxy_connect_timeout 10s;
+            proxy_read_timeout 300s;
+            proxy_send_timeout 300s;
+            
+            # SSE Support
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            chunked_transfer_encoding off;
         }
-        
-        location = /chat/stream {
-            limit_req zone=chat_unlimited burst=50 nodelay;
-            proxy_pass http://quart_backend/chat/stream;
+
+        # Direct Redis Commands (for complex operations)
+        location /api/redis-cmd {
+            limit_req zone=redis_limit burst=30 nodelay;
+            
+            # CORS Headers
+            if ($cors_method = 11) {
+                add_header Access-Control-Allow-Origin "*";
+                add_header Access-Control-Allow-Methods "POST, OPTIONS";
+                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+                add_header Access-Control-Max-Age 86400;
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+            
+            if ($cors_method = 1) {
+                add_header Access-Control-Allow-Origin "*";
+                add_header Access-Control-Allow-Methods "POST, OPTIONS";
+                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+            }
+            
+            # Proxy to Redis HTTP wrapper
+            proxy_pass http://redis:8001/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # HTTP wrapper specific settings
+            proxy_timeout 30s;
+            proxy_connect_timeout 5s;
         }
-        
-        location = /chat/interrupt {
-            limit_req zone=chat_unlimited burst=20 nodelay;
-            proxy_pass http://quart_backend/chat/interrupt;
-        }
-        
-        location = /chat/clear {
-            limit_req zone=chat_unlimited burst=10 nodelay;
-            proxy_pass http://quart_backend/chat/clear;
-        }
-        
-        location = /chat/delete_session {
-            limit_req zone=chat_unlimited burst=10 nodelay;
-            proxy_pass http://quart_backend/chat/delete_session;
-        }
-        
-        # =====================================================
-        # ADMIN ROUTES - Higher limits for admin users
-        # =====================================================
-        
-        location = /admin {
-            limit_req zone=admin_unlimited burst=50 nodelay;
-            client_max_body_size 1000M;
-            proxy_pass http://quart_backend/admin;
-        }
-        
-        location = /admin/cleanup {
-            limit_req zone=admin_unlimited burst=5 nodelay;
-            proxy_pass http://quart_backend/admin/cleanup;
-        }
-        
-        location = /admin/approve_user {
-            limit_req zone=admin_unlimited burst=10 nodelay;
-            proxy_pass http://quart_backend/admin/approve_user;
-        }
-        
-        location = /admin/reject_user {
-            limit_req zone=admin_unlimited burst=10 nodelay;
-            proxy_pass http://quart_backend/admin/reject_user;
-        }
-        
-        location ~ ^/admin/user/([a-zA-Z0-9_-]+)$ {
-            limit_req zone=admin_unlimited burst=20 nodelay;
-            proxy_pass http://quart_backend/admin/user/$1;
-        }
-        
-        location ~ ^/admin/user/([a-zA-Z0-9_-]+)/delete$ {
-            limit_req zone=admin_unlimited burst=5 nodelay;
-            proxy_pass http://quart_backend/admin/user/$1/delete;
-        }
-        
-        # =====================================================
-        # ROOT ROUTE - Redirect logic handled by Quart
-        # =====================================================
-        location = / {
-            limit_req zone=strict_limit burst=10 nodelay;
-            proxy_pass http://quart_backend/;
-        }
-        
+
         # =====================================================
         # ERROR PAGES
         # =====================================================
