--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,9 @@
-# nginx/Dockerfile - Clean NGINX container with static files
+# nginx/Dockerfile - Static file server with all application files
 
 FROM nginx:alpine
+
+# Install curl for health checks
+RUN apk add --no-cache curl
 
 # Set working directory
 WORKDIR /usr/share/nginx/html
@@ -13,18 +16,34 @@ RUN rm /etc/nginx/conf.d/default.conf && \
 # Copy NGINX configuration
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Copy static HTML error pages
-COPY html/unauthorized.html /usr/share/nginx/html/
-COPY html/rate_limited.html /usr/share/nginx/html/
-COPY html/50x.html /usr/share/nginx/html/
-COPY html/404.html /usr/share/nginx/html/
+# Create directory structure
+RUN mkdir -p /usr/share/nginx/html/css && \
+    mkdir -p /usr/share/nginx/html/js && \
+    mkdir -p /usr/share/nginx/html/assets && \
+    mkdir -p /var/cache/nginx && \
+    mkdir -p /var/log/nginx
 
-# Copy static assets (CSS, JS, etc.)
-COPY static/ /usr/share/nginx/html/static/
+# Copy static files
+COPY static/css/ /usr/share/nginx/html/css/
+COPY static/js/ /usr/share/nginx/html/js/
+COPY static/html/ /usr/share/nginx/html/
+COPY static/assets/ /usr/share/nginx/html/assets/
+
+# Copy error pages to root for nginx error_page directives
+RUN cp /usr/share/nginx/html/404.html /usr/share/nginx/html/ && \
+    cp /usr/share/nginx/html/50x.html /usr/share/nginx/html/ && \
+    cp /usr/share/nginx/html/rate_limited.html /usr/share/nginx/html/ && \
+    cp /usr/share/nginx/html/unauthorized.html /usr/share/nginx/html/
 
 # Set proper permissions
 RUN chmod -R 755 /usr/share/nginx/html/ && \
-    chown -R nginx:nginx /usr/share/nginx/html/
+    chown -R nginx:nginx /usr/share/nginx/html/ && \
+    chown -R nginx:nginx /var/cache/nginx && \
+    chown -R nginx:nginx /var/log/nginx
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost/ || exit 1
 
 # Expose port
 EXPOSE 80
