--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,5 @@
+# nginx/nginx.conf - Secure configuration with internal Node.js backend
+
 user nginx;
 worker_processes auto;
 worker_rlimit_nofile 65536;
@@ -30,47 +32,33 @@ http {
     types_hash_max_size 2048;
     server_tokens off;
     client_max_body_size 10M;
-    client_body_buffer_size 16k;
-    client_header_buffer_size 2k;
-    large_client_header_buffers 4 8k;
     
-    # GZIP Configuration
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 256;
-    gzip_comp_level 6;
-    gzip_types
-        text/plain
-        text/css
-        application/json
-        application/xml
-        application/javascript
-        text/javascript
-        text/html;
-
-    # CORS Headers for API calls
-    map $request_method $cors_method {
-        OPTIONS 11;
-        GET     1;
-        POST    1;
-        PUT     1;
-        DELETE  1;
-        default 0;
-    }
-
     # Rate limiting zones
+    limit_req_zone $binary_remote_addr zone=auth_limit:10m rate=10r/m;
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=100r/m;
-    limit_req_zone $binary_remote_addr zone=redis_limit:10m rate=200r/m;
     limit_req_zone $binary_remote_addr zone=ollama_limit:10m rate=50r/m;
     
     limit_req_status 429;
 
     # Upstream definitions
+    upstream node_backend {
+        server localhost:3000;  # Internal Node.js backend
+    }
+    
     upstream ollama_backend {
         server ollama:11434;
     }
 
-    # Main server block
+    # Internal auth subrequest
+    location = /auth {
+        internal;
+        proxy_pass http://node_backend/api/auth/verify;
+        proxy_pass_request_body off;
+        proxy_set_header Content-Length "";
+        proxy_set_header X-Original-URI $request_uri;
+        proxy_set_header Authorization $http_authorization;
+    }
+
     server {
         listen 80 default_server;
         server_name localhost ai.junder.uk _;
@@ -85,129 +73,123 @@ http {
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
         # =====================================================
-        # STATIC FILES
+        # STATIC FILES (Public)
         # =====================================================
         
-        # HTML Pages
         location / {
             try_files $uri $uri/ /index.html;
             expires 1h;
             add_header Cache-Control "public, max-age=3600";
         }
         
-        location ~* \.(html)$ {
-            expires 1h;
-            add_header Cache-Control "public, max-age=3600";
-        }
-        
-        # CSS, JS, Assets
         location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 30d;
             add_header Cache-Control "public, max-age=2592000";
         }
 
+        # Public pages (no auth required)
+        location ~* ^/(login|register|$) {
+            try_files $uri $uri/ /index.html;
+        }
+
         # =====================================================
-        # API PROXIES WITH CORS
+        # API ROUTES (All handled by internal Node.js backend)
         # =====================================================
         
-        # Ollama API Proxy
+        # Public auth endpoints
+        location /api/auth/login {
+            limit_req zone=auth_limit burst=5 nodelay;
+            proxy_pass http://node_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /api/auth/register {
+            limit_req zone=auth_limit burst=5 nodelay;
+            proxy_pass http://node_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        # Protected API endpoints
+        location /api/ {
+            limit_req zone=api_limit burst=20 nodelay;
+            
+            # Require authentication for all other API calls
+            auth_request /auth;
+            auth_request_set $user_id $upstream_http_x_user_id;
+            auth_request_set $username $upstream_http_x_username;
+            auth_request_set $is_admin $upstream_http_x_is_admin;
+            
+            proxy_pass http://node_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-User-ID $user_id;
+            proxy_set_header X-Username $username;
+            proxy_set_header X-Is-Admin $is_admin;
+        }
+
+        # =====================================================
+        # PROTECTED STATIC PAGES
+        # =====================================================
+        
+        location ~* ^/(chat|admin|user-detail) {
+            auth_request /auth;
+            try_files $uri $uri/ /index.html;
+        }
+
+        # =====================================================
+        # OLLAMA PROXY (Protected)
+        # =====================================================
+        
         location /api/ollama/ {
             limit_req zone=ollama_limit burst=20 nodelay;
             
-            # CORS Headers
-            if ($cors_method = 11) {
-                add_header Access-Control-Allow-Origin "*";
-                add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
-                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
-                add_header Access-Control-Max-Age 86400;
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
+            auth_request /auth;
+            auth_request_set $user_id $upstream_http_x_user_id;
             
-            if ($cors_method = 1) {
-                add_header Access-Control-Allow-Origin "*";
-                add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
-                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
-            }
-            
-            # Remove /api/ollama prefix and proxy to Ollama
             rewrite ^/api/ollama/(.*)$ /$1 break;
             proxy_pass http://ollama_backend;
+            proxy_set_header X-User-ID $user_id;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
             
-            # Streaming support for Ollama
+            # Streaming support
             proxy_buffering off;
             proxy_cache off;
             proxy_timeout 300s;
-            proxy_connect_timeout 10s;
-            proxy_read_timeout 300s;
-            proxy_send_timeout 300s;
-            
-            # SSE Support
             proxy_http_version 1.1;
             proxy_set_header Connection "";
-            chunked_transfer_encoding off;
-        }
-
-        # Direct Redis Commands (for complex operations)
-        location /api/redis-cmd {
-            limit_req zone=redis_limit burst=30 nodelay;
-            
-            # CORS Headers
-            if ($cors_method = 11) {
-                add_header Access-Control-Allow-Origin "*";
-                add_header Access-Control-Allow-Methods "POST, OPTIONS";
-                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
-                add_header Access-Control-Max-Age 86400;
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
-            
-            if ($cors_method = 1) {
-                add_header Access-Control-Allow-Origin "*";
-                add_header Access-Control-Allow-Methods "POST, OPTIONS";
-                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
-            }
-            
-            # Proxy to Redis HTTP wrapper
-            proxy_pass http://redis:8001/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # HTTP wrapper specific settings
-            proxy_timeout 30s;
-            proxy_connect_timeout 5s;
         }
 
         # =====================================================
         # ERROR PAGES
         # =====================================================
-        error_page 403 /unauthorized.html;
+        
+        error_page 401 403 /unauthorized.html;
+        error_page 429 /rate_limited.html;
+        error_page 502 503 504 /50x.html;
+        error_page 404 /404.html;
+        
         location = /unauthorized.html {
             root /usr/share/nginx/html;
             internal;
         }
         
-        error_page 429 /rate_limited.html;
         location = /rate_limited.html {
             root /usr/share/nginx/html;
             internal;
         }
         
-        error_page 502 503 504 /50x.html;
         location = /50x.html {
             root /usr/share/nginx/html;
             internal;
         }
         
-        error_page 404 /404.html;
         location = /404.html {
             root /usr/share/nginx/html;
             internal;
