--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,7 @@
-# nginx/nginx.conf - Secure configuration with internal Node.js backend
+# nginx/nginx.conf - Nginx with njs JavaScript runtime
+
+# Load njs module
+load_module modules/ngx_http_js_module.so;
 
 user nginx;
 worker_processes auto;
@@ -16,11 +19,19 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    # Load JavaScript modules
+    js_import auth from /etc/nginx/njs/auth.js;
+    js_import database from /etc/nginx/njs/database.js;
+    js_import utils from /etc/nginx/njs/utils.js;
+
+    # Set variables for configuration
+    js_set $admin_username auth.getAdminUsername;
+    js_set $max_pending_users auth.getMaxPendingUsers;
+
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for" '
-                    'rt=$request_time uct="$upstream_connect_time" '
-                    'uht="$upstream_header_time" urt="$upstream_response_time"';
+                    'rt=$request_time';
     
     access_log /var/log/nginx/access.log main;
 
@@ -41,22 +52,14 @@ http {
     limit_req_status 429;
 
     # Upstream definitions
-    upstream node_backend {
-        server localhost:3000;  # Internal Node.js backend
-    }
-    
     upstream ollama_backend {
         server ollama:11434;
     }
 
-    # Internal auth subrequest
+    # Internal auth subrequest using njs
     location = /auth {
         internal;
-        proxy_pass http://node_backend/api/auth/verify;
-        proxy_pass_request_body off;
-        proxy_set_header Content-Length "";
-        proxy_set_header X-Original-URI $request_uri;
-        proxy_set_header Authorization $http_authorization;
+        js_content auth.verifyToken;
     }
 
     server {
@@ -93,24 +96,27 @@ http {
         }
 
         # =====================================================
-        # API ROUTES (All handled by internal Node.js backend)
+        # NJS API ENDPOINTS
         # =====================================================
         
         # Public auth endpoints
         location /api/auth/login {
             limit_req zone=auth_limit burst=5 nodelay;
-            proxy_pass http://node_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            js_content auth.handleLogin;
         }
 
         location /api/auth/register {
             limit_req zone=auth_limit burst=5 nodelay;
-            proxy_pass http://node_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            js_content auth.handleRegister;
+        }
+
+        location /api/auth/verify {
+            js_content auth.verifyTokenEndpoint;
+        }
+
+        # Health check
+        location /health {
+            js_content utils.healthCheck;
         }
 
         # Protected API endpoints
@@ -123,13 +129,21 @@ http {
             auth_request_set $username $upstream_http_x_username;
             auth_request_set $is_admin $upstream_http_x_is_admin;
             
-            proxy_pass http://node_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-User-ID $user_id;
-            proxy_set_header X-Username $username;
-            proxy_set_header X-Is-Admin $is_admin;
+            # Route to appropriate handlers
+            location /api/admin/ {
+                if ($is_admin != "true") {
+                    return 403;
+                }
+                js_content auth.handleAdminRequest;
+            }
+            
+            location /api/chat/ {
+                js_content database.handleChatRequest;
+            }
+            
+            location /api/database/ {
+                js_content database.handleDatabaseRequest;
+            }
         }
 
         # =====================================================
@@ -164,6 +178,20 @@ http {
             proxy_timeout 300s;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
+        }
+
+        # =====================================================
+        # REDIS PROXY (Protected)
+        # =====================================================
+        
+        location /api/redis-cmd {
+            limit_req zone=api_limit burst=30 nodelay;
+            
+            auth_request /auth;
+            auth_request_set $user_id $upstream_http_x_user_id;
+            
+            # Add user context and security
+            js_content database.handleRedisProxy;
         }
 
         # =====================================================
