server side njs

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Nginx with njs JavaScript runtime
+# nginx/nginx.conf - Updated with Redis proxy support
 
 # Load njs module
 load_module modules/ngx_http_js_module.so;
@@ -55,11 +55,27 @@ http {
     upstream ollama_backend {
         server ollama:11434;
     }
+    
+    upstream redis_backend {
+        server redis:8001;
+    }
 
     # Internal auth subrequest using njs
     location = /auth {
         internal;
         js_content auth.verifyToken;
+    }
+
+    # Internal Redis proxy
+    location = /redis-proxy-internal {
+        internal;
+        proxy_pass http://redis_backend/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_timeout 30s;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
     }
 
     server {
@@ -119,7 +135,27 @@ http {
             js_content utils.healthCheck;
         }
 
-        # Protected API endpoints
+        # =====================================================
+        # REDIS HTTP PROXY (Protected)
+        # =====================================================
+        
+        location /api/redis-cmd {
+            limit_req zone=api_limit burst=30 nodelay;
+            
+            # Require authentication
+            auth_request /auth;
+            auth_request_set $user_id $upstream_http_x_user_id;
+            auth_request_set $username $upstream_http_x_username;
+            auth_request_set $is_admin $upstream_http_x_is_admin;
+            
+            # Add user context and security via njs
+            js_content database.handleRedisProxy;
+        }
+
+        # =====================================================
+        # PROTECTED API ENDPOINTS
+        # =====================================================
+        
         location /api/ {
             limit_req zone=api_limit burst=20 nodelay;
             
@@ -178,20 +214,6 @@ http {
             proxy_timeout 300s;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
-        }
-
-        # =====================================================
-        # REDIS PROXY (Protected)
-        # =====================================================
-        
-        location /api/redis-cmd {
-            limit_req zone=api_limit burst=30 nodelay;
-            
-            auth_request /auth;
-            auth_request_set $user_id $upstream_http_x_user_id;
-            
-            # Add user context and security
-            js_content database.handleRedisProxy;
         }
 
         # =====================================================
