--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,4 @@
-# nginx/Dockerfile - Simple version
+# nginx/Dockerfile - Simple fixed version
 
 FROM nginx:alpine
 
@@ -16,10 +16,18 @@ RUN rm /etc/nginx/conf.d/default.conf && \
 # Copy NGINX configuration
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Create directories
+# Create directories first
 RUN mkdir -p /etc/nginx/njs && \
+    mkdir -p /usr/share/nginx/html/css && \
+    mkdir -p /usr/share/nginx/html/js/lib && \
+    mkdir -p /usr/share/nginx/html/assets && \
     mkdir -p /var/cache/nginx && \
     mkdir -p /var/log/nginx
+
+# Download required libraries AFTER creating directories
+RUN curl -o /usr/share/nginx/html/js/lib/jquery.min.js https://code.jquery.com/jquery-3.7.1.min.js && \
+    curl -o /usr/share/nginx/html/js/lib/bootstrap.min.js https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js && \
+    curl -o /usr/share/nginx/html/css/bootstrap.min.css https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css
 
 # Copy server-side JavaScript modules
 COPY njs/ /etc/nginx/njs/
@@ -33,11 +41,6 @@ RUN chmod -R 755 /usr/share/nginx/html/ && \
     chown -R nginx:nginx /usr/share/nginx/html/ && \
     chown -R nginx:nginx /var/cache/nginx && \
     chown -R nginx:nginx /var/log/nginx
-    
-# Download required libraries
-RUN curl -o /usr/share/nginx/html/js/lib/jquery.min.js https://code.jquery.com/jquery-3.7.1.min.js && \
-    curl -o /usr/share/nginx/html/js/lib/bootstrap.min.js https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js && \
-    curl -o /usr/share/nginx/html/css/bootstrap.min.css https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
@@ -46,4 +49,3 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
-
